<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ViewAcronymActivity" >
    
    <EditText
        android:id="@+id/view_acronym_abbreviation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:gravity="top"
        android:hint="@string/view_acronym_abbreviation"
        android:imeOptions="actionNext" >

    </EditText>
    
    <EditText
        android:id="@+id/view_acronym_fullform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:gravity="top"
        android:hint="@string/view_acronym_fullform"
        android:imeOptions="actionNext" >

    </EditText>
    
    <EditText
        android:id="@+id/view_acronym_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.24"
        android:gravity="top"
        android:hint="@string/view_acronym_description"
        android:imeOptions="actionNext" >
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/view_acronym_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.50"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="modifyAcronym"
            android:text="@string/view_acronym_modify_button" />

        <Button
            android:id="@+id/view_acronym_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.50"
            android:background="?android:attr/selectableItemBackground"
            android:onClick="deleteAcronym"
            android:text="@string/view_acronym_delete_button" />
    </LinearLayout>

</LinearLayout>
